CIRC-2295: replace deprecated mod-configuration with mod-settings for fetching tenant's locale settings