@@ -25,7 +25,6 @@ import org.folio.circulation.domain.reorder.ReorderQueueRequest;
 import org.folio.circulation.domain.representations.logs.LogEventType;
 import org.folio.circulation.domain.validation.RequestQueueValidation;
 import org.folio.circulation.infrastructure.storage.CalendarRepository;
-import org.folio.circulation.infrastructure.storage.ConfigurationRepository;
 import org.folio.circulation.infrastructure.storage.ServicePointRepository;
 import org.folio.circulation.infrastructure.storage.SettingsRepository;
 import org.folio.circulation.infrastructure.storage.inventory.ItemRepository;
@@ -122,13 +121,12 @@ public class RequestQueueResource extends Resource {
     final var loanRepository = new LoanRepository(clients, itemRepository, userRepository);
     final var requestRepository = RequestRepository.using(clients,
       itemRepository, userRepository, loanRepository);
-    final var configurationRepository = new ConfigurationRepository(clients);
     final var settingsRepository = new SettingsRepository(clients);
     final var requestQueueRepository = new RequestQueueRepository(requestRepository);
 
     final UpdateRequestQueue updateRequestQueue = new UpdateRequestQueue(
       requestQueueRepository, requestRepository, new ServicePointRepository(clients),
-      configurationRepository, RequestQueueService.using(clients), new CalendarRepository(clients));
+      settingsRepository, RequestQueueService.using(clients), new CalendarRepository(clients));
 
     validateTlrFeatureStatus(settingsRepository, requestQueueType, idParamValue)
       .thenCompose(r -> r.after(tlrSettings ->
@@ -168,7 +166,7 @@ public class RequestQueueResource extends Resource {
 
     reorderRequestContext.after(r -> {
       CompletableFuture.runAsync(() -> {
-        List<Request> reordered = r.getReorderRequestToRequestMap().values().stream().filter(Request::hasChangedPosition).collect(Collectors.toList());
+        List<Request> reordered = r.getReorderRequestToRequestMap().values().stream().filter(Request::hasChangedPosition).toList();
         eventPublisher.publishLogRecord(mapToRequestLogEventJson(reordered), LogEventType.REQUEST_REORDERED);
       });
       return null;
